src/objects/Contract_Management__c.object
<CustomObject>
    <description>Object to Capture Nimble Contracts</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Account</description>
        <inlineHelpText>Related Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NonStandard_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Agreement Attached</description>
        <label>Agreement Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <description>Agreement Name</description>
        <inlineHelpText>Please enter Company/Entity Name</inlineHelpText>
        <label>Entity Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Owner1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <description>Agreement Type</description>
        <inlineHelpText>Select type of Agreement</inlineHelpText>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Anticipated Discounts Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User License Agreement (EULA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter of Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Subscription and Support Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFR Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-disclosure Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitted Transfer Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC/Trial Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller through Distribution Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier/Manufacturer Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Alliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms/Conditions of Sale/Support Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amendment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval Attached</description>
        <label>Approval Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Approval Status</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>01 New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 Closed / Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 Closed / Not Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assignment_ApprvBy__c</fullName>
        <label>Assignment Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Mod__c</fullName>
        <label>Assignment Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assignment_Section__c</fullName>
        <label>Assignment Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Note2__c</fullName>
        <label>Change Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confidentiality_ApprvBy__c</fullName>
        <label>Confidentiality Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Mod__c</fullName>
        <label>Confidentiality Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Section__c</fullName>
        <label>Confidentiality Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confidentiality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidentiality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deleted_ApprvBys_ApprvBy__c</fullName>
        <label>Deleted Approved By(s) Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_Mods_Mod__c</fullName>
        <label>Deleted Modifications Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deleted_Sections_Section__c</fullName>
        <label>Deleted Sections Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deleted_Sections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted Sections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Terms_ApprvBy__c</fullName>
        <label>Delivery Terms Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Terms_Mod__c</fullName>
        <label>Delivery Terms Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Terms_Section__c</fullName>
        <label>Delivery Terms Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Est Approval Date</description>
        <inlineHelpText>Agreement Effective Date</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <label>Form Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Nonstandard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gov_Law_Venue_ApprvBy__c</fullName>
        <label>Governing Law/Venue Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gov_Law_Venue_Mod__c</fullName>
        <label>Governing Law/Venue Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gov_Law_Venue_Section__c</fullName>
        <label>Governing Law/Venue Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gov_Law_Venue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Governing Law/Venue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indeminification_ApprvBy__c</fullName>
        <label>Indeminification Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indeminification_Mod__c</fullName>
        <label>Indeminification Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Indeminification_Section__c</fullName>
        <label>Indeminification Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Indemnification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indemnification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limit_of_Liability_ApprvBy__c</fullName>
        <label>Limitation of Liability Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit_of_Liability_Mod__c</fullName>
        <label>Limitation of Liability Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Limit_of_Liability_Section__c</fullName>
        <label>Limitation of Liability Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Limit_of_Liability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limitation of Liability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NonSolicitation_ApprvBy__c</fullName>
        <label>Non-Solicitation Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonSolicitation_Mod__c</fullName>
        <label>Non-Solicitation Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NonSolicitation_Section__c</fullName>
        <label>Non-Solicitation Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NonSolicitation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Solicitation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Opportunity</description>
        <inlineHelpText>Related Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>NonStandard_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other2_ApprvBy__c</fullName>
        <label>Other Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other2_Mod__c</fullName>
        <label>Other Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other2_Section__c</fullName>
        <label>Other Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Licenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other3_ApprvBy__c</fullName>
        <label>Other Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other3_Mod__c</fullName>
        <label>Other Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other3_Section__c</fullName>
        <label>Other Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other4_ApprvBy__c</fullName>
        <label>Other Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other4_Mod__c</fullName>
        <label>Other Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other4_Section__c</fullName>
        <label>Other Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_ApprvBy__c</fullName>
        <label>Payment Terms Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Mod__c</fullName>
        <label>Payment Terms Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Section__c</fullName>
        <label>Payment Terms Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <picklist>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_ApprvBy__c</fullName>
        <label>Support Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Mod__c</fullName>
        <label>Support Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Section__c</fullName>
        <label>Support Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_Termination_ApprvBy__c</fullName>
        <label>Term/Termination Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Termination_Mod__c</fullName>
        <label>Term/Termination Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Term_Termination_Section__c</fullName>
        <label>Term/Termination Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Term_Termination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Term/Termination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_Expiration_Date__c</fullName>
        <label>Termination/Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranties_ApprvBy__c</fullName>
        <label>Warranties Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranties_Mod__c</fullName>
        <label>Warranties Modification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Warranties_Section__c</fullName>
        <label>Warranties Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Warranties__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warranties</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract Management</label>
    <listViews>
        <fullName>All_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Name__c</columns>
        <columns>Agreement_Owner1__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Category__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>